--- a/source/css/_base/variable.styl
+++ b/source/css/_base/variable.styl
@@ -11,9 +11,8 @@ color-strong = #222
 font-default = "Helvetica Neue", "Helvetica", Arial, sans-serif
 font-serif = "Georgia", serif
 font-mono = Monaco, Menlo, Consolas, Courier New, monospace
-font-title = "Droid Serif", Helvetica Neue, Helvetica, Arial, sans-serif
+font-title = "Georgia", Helvetica Neue, Helvetica, Arial, sans-serif
 
-@import url("https://fonts.googleapis.com/css?family=Droid+Serif:400italic,700italic,400,700")
 
 font-icon = FontAwesome
 font-icon-path = 'fonts/fontawesome-webfont'
