--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -48,4 +48,5 @@
   <%- css('css/style.css') %>
   <!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <%- partial('google-analytics') %>
+  <%- partial('baidu_tongji') %>
 </head>
